[package]
name = "ang"
version = "0.4.0"
edition = "2018"
authors = ["George Burton <burtonageo@gmail.com>"]
description = "Angular types and common helper methods."
documentation = "https://docs.rs/ang"
homepage = "https://github.com/burtonageo/ang"
repository = "https://github.com/burtonageo/ang"
readme = "README.md"
keywords = ["angle", "geometry", "orientation", "degree", "radian"]
license = "MIT"

[dependencies]
approx = "0.4"
num-traits = "0.2"

[dev-dependencies]
hamcrest2 = "0.3"
quickcheck = "0.9.2"
