[package]
name = "ang"
version = "0.6.0"
edition = "2018"
authors = ["George Burton <burtonageo@gmail.com>"]
description = "Angular types and common helper methods."
documentation = "https://docs.rs/ang"
homepage = "https://github.com/burtonageo/ang"
repository = "https://github.com/burtonageo/ang"
readme = "README.md"
keywords = ["angle", "geometry", "orientation", "degree", "radian"]
license = "MIT"

[dependencies]
approx = {version="0.5", default-features = false}
num-traits = {version="0.2", default-features = false}
serde = {version="1", default-features = false, optional = true}

[dev-dependencies]
hamcrest2 = "0.3"
quickcheck = "0.9.2"

[features]
default = ["std"]
impl-serde = ["serde", "serde/derive"]
std = ["approx/std", "num-traits/std"]
